--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
                   <p class="card-text">A clone of the famous E-commerce application Amazon.</p>
                 </div>
 
-                <a href="#" class="layer-link"></a>
+                <a href="https://github.com/balaji-otaku/amazonclone" class="layer-link"></a>
 
               </div>
             </li>
@@ -312,7 +312,7 @@
                   <p class="card-text">A Portfolio about me.</p>
                 </div>
 
-                <a href="#" class="layer-link"></a>
+                <a href="https://github.com/balaji-otaku/portfolio" class="layer-link"></a>
 
               </div>
             </li>
@@ -329,7 +329,7 @@
                   <p class="card-text">A Todo list that allows you to add,edit and delete items.</p>
                 </div>
 
-                <a href="#" class="layer-link"></a>
+                <a href="https://github.com/balaji-otaku/todo" class="layer-link"></a>
 
               </div>
             </li>
