--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   <!-- 
     - primary meta tags
   -->
-  <title>Balaji Srinivasan - Web Developer</title>
-  <meta name="title" content="Balaji Srinivasan- Web Developer">
+  <title>Balaji Srinivasan - Frontend Developer</title>
+  <meta name="title" content="Balaji Srinivasan- Frontend Developer">
   <meta name="description" content="This is a personal portfolio html template made by Balaji">
 
   <!-- 
@@ -117,15 +117,15 @@
             <h1 class="h1 hero-title">Balaji Srinivasan</h1>
 
             <p class="hero-subtitle">
-              Creative Web Developer
+              Creative Frontend Developer
             </p>
 
             <div class="hero-banner">
-              <img src="./assets/images/hero-banner.png" width="800" height="800" alt="kane williams" class="w-100">
+              <img src="./assets/images/hero-banner.png" width="800" height="800" alt="balaji" class="w-100">
             </div>
 
             <p class="section-text">
-              Hi, I’m Balaji Srinivasan and I am an enthusiastic web developer who dreams to make the world better place by
+              Hi, I’m Balaji Srinivasan and I am an enthusiastic Frontend developer who dreams to make the world better place by
               creating captivating products.
             </p>
             <a href="https://drive.google.com/drive/folders/1UQVp4mpWN76SuZBRStMizkS-7P-hgRMq" class="btn has-before">
@@ -171,7 +171,7 @@
               </p>
 
               <p class="section-text">
-                Quality-focused and results-driven professional seeking a position as a web developer with JavaScript Juice where I can use my two years of experience as a web developer to enhance the user experience.
+                Quality-focused and results-driven professional seeking a position as a frontend developer with JavaScript Juice where I can use my two years of experience as a web developer to enhance the user experience.
               </p>
 
               
