--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
               </p>
 
               <p class="section-text">
-                Quality-focused and results-driven professional seeking a position as a frontend developer with JavaScript Juice where I can use my two years of experience as a web developer to enhance the user experience.
+                Quality-focused and results-driven professional seeking a position as a frontend developer with JavaScript Juice where I can use my two years of experience as afrontend developer to enhance the user experience.
               </p>
 
               
