--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
               Hi, I’m Balaji Srinivasan and I am an enthusiastic Frontend developer who dreams to make the world better place by
               creating captivating products.
             </p>
-            <a href="https://drive.google.com/drive/folders/1UQVp4mpWN76SuZBRStMizkS-7P-hgRMq" class="btn has-before">
+            <a href="https://drive.google.com/drive/folders/1UQVp4mpWN76SuZBRStMizkS-7P-hgRMq" class="btn">
               <span class="span">Download CV</span>
 
               <ion-icon name="download-outline" aria-hidden="true"></ion-icon>
